# A-subdomain-based-GPU-parallel-scheme-for-accelerating-Perdynamics-modeling

./: Base.cuh  CMakeLists.txt  Coord.cu  Coord.cuh  Error.cuh  Force_Bond.cu  Force_Bond.cuh  Function.cu  Function.cuh  Initial.cu  Initial.cuh  Integrate.cu  Integrate.cuh  Memory.cu  Memory.cuh  Neighbor.cu  Neighbor.cuh  README.md  Rigion_division.cu  Rigion_division.cuh  Save.cu  Save.cuh  Solve_Plate_With_Crack.cu  Solve_Plate_With_Crack.cuh  Surf_Corr.cu  Surf_Corr.cuh  main.cu
